kube-pod-example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "pwe2"
---
apiVersion: v1
kind: Service
metadata:
  name: pwe
  namespace: pwe2
spec:
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: pwe
  namespace: pwe2
spec:
  containers:
  - name: db
    image: kukam/pwe-maria:latest
    volumeMounts:
    - name: maria-storage
      mountPath: /dbhome
    ports:
    - containerPort: 7775
  - name: pwe
    image: kukam/pwe:latest
    volumeMounts:
    - name: pwe-project
      mountPath: /PWE/webapps/myproject
    - name: pwe-uploadfile
      mountPath: /PWE/webapps/myproject/uploadfile
    ports:
    - containerPort: 7779
  - name: webproxy
    image: kukam/pwe-nginx:latest
    ports:
    - containerPort: 80
  volumes:
  - name: pwe-project
    emptyDir: {}
  - name: pwe-uploadfile
    emptyDir: {}
  - name: maria-storage
    emptyDir: {}
