kube-pwe-nginx-maria-sslingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "pwe"
---
apiVersion: v1
kind: Service
metadata:
  name: pwe-maria-svc
  namespace: pwe
spec:
  ports:
  - port: 7775
  selector:
    app: pwe-db
---
apiVersion: v1
kind: Service
metadata:
  name: pwe
  namespace: pwe
spec:
  ports:
  - port: 7779
  selector:
    app: pwe
---
apiVersion: v1
kind: Service
metadata:
  name: pwe-nginx-svc
  namespace: pwe
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pwe-webproxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pwe-db
  name: pwe-db
  namespace: pwe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pwe-db
  template:
    metadata:
      labels:
        app: pwe-db
    spec:
      containers:
      - image: kukam/pwe-maria:latest
        imagePullPolicy: Always
        name: pwe-maria
        ports:
        - containerPort: 7775
          name: pwe-db
        volumeMounts:
        - name: maria-storage
          mountPath: /dbhome
      volumes:
      - name: maria-storage
        emptyDir: {}

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: pwe
  name: pwe
  namespace: pwe
spec:
  selector:
    matchLabels:
      app: pwe
  template:
    metadata:
      labels:
        app: pwe
    spec:
      containers:
      - image: kukam/pwe:latest
        imagePullPolicy: Always
        name: pwe
        ports:
        - containerPort: 7779
          name: pwe
        volumeMounts:
        - name: pwe-project
          mountPath: /PWE/webapps/myproject
        - name: pwe-uploadfile
          mountPath: /PWE/webapps/myproject/uploadfile
      volumes:
      - name: pwe-project
        emptyDir: {}
      - name: pwe-uploadfile
        emptyDir: {}

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: pwe-webproxy
  name: pwe-webproxy
  namespace: pwe
spec:
  selector:
    matchLabels:
      app: pwe-webproxy
  template:
    metadata:
      labels:
        app: pwe-webproxy
    spec:
      containers:
      - image: kukam/pwe-nginx:latest
        imagePullPolicy: Always
        name: pwe-nginx
        ports:
        - containerPort: 80
          name: pwe-webproxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pwe-ingress
  namespace: pwe
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - pwe.kube.freebox.cz
    secretName: pwe-secret
  rules:
  - host: pwe.kube.freebox.cz
    http:
      paths:
      - path: /
        backend:
          serviceName: pwe-nginx-svc
          servicePort: 80
